# argo

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Foo.cry  NEWS.rst  README-dist.rst  README.md  README.rst  cabal.project  cryptol-api.py  cryptol_api.py  proto-test.el  proto.cabal  protocol-notes.org  stack.yaml  stage.sh
.circleci/: config.yml
.github/workflows/: ci.yml
argo/: CHANGELOG.md  argo.cabal
argo/src/: Argo.hs
argo/src/Argo/: CacheTree.hs  DefaultMain.hs  Doc.hs  HistoryWrapper.hs  JSONRPC.hs  JSONRPC.lhs  Netstring.hs  Panic.hs  ServerState.hs  Socket.hs
argo/src/Argo/Doc/: Protocol.hs  ReST.hs
argo/src/Argo/JSONRPC/: Socket.hs
argo/test/: Test.hs
cryptol-remote-api/: cryptol-remote-api.cabal
cryptol-remote-api/cryptol-remote-api/: Main.hs
cryptol-remote-api/src/: CryptolServer.hs  Main.hs
cryptol-remote-api/src/CryptolServer/: Call.hs  ChangeDir.hs  EvalExpr.hs  Exceptions.hs  FocusedModule.hs  LoadModule.hs  Names.hs  Sat.hs  TypeCheck.hs
cryptol-remote-api/src/CryptolServer/Data/: Expression.hs  Type.hs
cryptol-remote-api/test/: Test.hs
cryptol-remote-api/test-scripts/: cryptol-api_test.py  cryptol-tests.py
cryptol-remote-api/test-scripts/test-data/: M.cry
cryptol-server/: cryptol-server.cabal
docs/: Cryptol.rst  CryptolPython.rst  Errors.rst  Makefile  Protocol.rst  Python.rst  SAW.rst  SAWPython.rst  conf.py  docs.css  index.rst
dreams/: salsa20.py  salsa20_comp.py  swap.py
examples/: salsa20.py  swap.py
file-echo-api/: CHANGELOG.md  README.md  README.rst  file-echo-api.cabal
file-echo-api/file-echo-api/: Main.hs
file-echo-api/mutable-file-echo-api/: Main.hs
file-echo-api/src/: FileEchoServer.hs  MutableFileEchoServer.hs
file-echo-api/test/: Test.hs
file-echo-api/test-scripts/: file-echo-tests.py
hello/: build.gradle
hello/src/main/java/: Netstring.java
hello/src/main/java/hello/: .#Greeter.java  Greeter.java
java/: README.md  build.gradle  settings.gradle
java/src/main/java/com/galois/cryptol/client/: BufferedNetstringReader.java  Call.java  ConcurrentKeyedChannel.java  ConcurrentMultiQueue.java  CryptolConnection.java  CryptolException.java  FutureQueue.java  IDSource.java  InvalidNetstringException.java  JsonByteArrayIterator.java  JsonCall.java  JsonConnection.java  JsonIterator.java  JsonNetstringReader.java  JsonRpcException.java  JsonSink.java  Library.java  Main.java  Netstring.java  NetstringIterator.java  NetstringSink.java  NetstringStreamIterator.java  Notification.java  QueueClosedException.java  StatefulJsonConnection.java
java/src/main/java/com/galois/cryptol/client/compost/: Main.java
java/src/main/java/com/galois/cryptol/client/connection/: Call.java  Connection.java  ConnectionException.java  ConnectionManager.java  InvalidRpcCallResultException.java  InvalidRpcResponseException.java  JsonConnection.java  JsonRpcCall.java  JsonRpcException.java  JsonRpcNotification.java  ManagedPipe.java  Notification.java  Pipe.java  UnhandledRpcException.java  Unit.java
java/src/main/java/com/galois/cryptol/client/connection/json/: JsonIterator.java  JsonPipe.java  JsonSink.java
java/src/main/java/com/galois/cryptol/client/connection/netstring/: Netstring.java  NetstringIterator.java  NetstringPipe.java  NetstringSink.java
java/src/main/java/com/galois/cryptol/client/connection/queue/: ConcurrentMultiQueue.java  FutureQueue.java  QueueClosedException.java
java/src/test/java/com/galois/cryptol/client/: LibraryTest.java  MultiQueueDemo.java
proto/: proto.cabal
proto/src/: CacheTree.hs  CryptolServer.hs  HistoryWrapper.hs  JSONRPC.lhs  Main.hs  Netstrings.hs
proto/src/CryptolServer/: Call.hs  ChangeDir.hs  EvalExpr.hs  LoadModule.hs
proto/src/JSONRPC/: Socket.hs
proto/test/: Test.hs
python/: CHANGELOG.md  Foo.cry  LICENSE  README.md  README.rst  argo-python.cabal  cryptol-api_test.py  cryptol-tests.py  cryptol_api.py  mypy.ini  pyproject.toml  requirements.txt  saw-test.py  setup.cfg  setup.py
python/argo/: connection.py  interaction.py  netstring.py
python/argo_client/: connection.py  interaction.py  netstring.py
python/cryptol/: __init__.py  bitvector.py  bv.py  cryptoltypes.py  solver.py
python/cryptol/test/: __init__.py  test_bitvector.py  test_bv.py
python/hs-test/: Main.hs
python/hs/Argo/: PythonBindings.hs
python/saw/: __init__.py  commands.py  connection.py  dashboard.py  easy.py  exceptions.py  llvm.py  llvm_types.py  proofscript.py
python/tests/: run_test_servers.sh  test_file-echo-api.py  test_file_echo_api.py  test_file_echo_interaction.py  test_mutable_file_echo_api.py
saw-remote-api/: saw-remote-api.cabal
saw-remote-api/saw-remote-api/: Main.hs
saw-remote-api/src/: SAWServer.hs
saw-remote-api/src/SAWServer/: CrucibleSetup.hs  CryptolExpression.hs  CryptolSetup.hs  Exceptions.hs  JVMCrucibleSetup.hs  JVMVerify.hs  LLVMCrucibleSetup.hs  LLVMVerify.hs  NoParams.hs  OK.hs  ProofScript.hs  SaveTerm.hs  SetupValue.hs  Term.hs  TopLevel.hs  VerifyCommon.hs
saw-remote-api/src/SAWServer/Data/: Contract.hs  LLVMType.hs  SetupValue.hs
saw-remote-api/test/: Test.hs
saw-remote-api/test-scripts/: assume.py  fail.py  salsa20.py  salsa20_easy.py  saw-test.py  seven.py  swap.py  swap_easy.py  swap_fancy.py  trivial.py
src/: JSONRPC.lhs  Main.hs  Main.lhs  Netstrings.hs
tasty-script-exitcode/: CHANGELOG.md  tasty-script-exitcode.cabal
tasty-script-exitcode/src/Test/Tasty/HUnit/: ScriptExit.hs
