cabal-version: 2.4
name:          argo
version:       0.1.0.0
license:       BSD-3-Clause
license-file:  LICENSE
author:        David Thrane Christiansen
maintainer:    dtc@galois.com
category:      Network
extra-source-files: CHANGELOG.md

common errors
  ghc-options:
    -Werror=missing-fields
    -Werror=incomplete-patterns
    -Werror=missing-methods
    -Werror=overlapping-patterns

common warnings
  ghc-options:
    -Wall
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-unsafe
    -Wno-safe
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies

common deps
  build-depends:
    base                         >= 4.11.1.0 && < 4.17,
    aeson                        >= 1.4.2 && < 2.1,
    async                       ^>= 2.2,
    bytestring                   >= 0.10.8 && < 0.12,
    containers                   >= 0.5.11 && <0.7,
    directory                   ^>= 1.3,
    filelock                    ^>= 0.1,
    filepath                    ^>= 1.4,
    hashable                    >= 1.2 && < 1.4,
    http-types                  ^>= 0.12,
    mtl                         ^>= 2.2,
    network                     >= 3.0.1,
    optparse-applicative        >= 0.14 && < 0.17,
    panic,
    safe                        ^>= 0.3,
    scientific                  ^>= 0.3,
    scotty                      ^>= 0.12,
    silently                    ^>= 1.2,
    text                        ^>= 1.2.3,
    unordered-containers        ^>= 0.2,
    uuid                        ^>= 1.3,
    warp                        >= 3.0.14,
    warp-tls                    >= 3.1.0


library
  import: deps, warnings, errors
  exposed-modules:
    Argo
    Argo.DefaultMain
    Argo.Doc
    Argo.Doc.Protocol
    Argo.Doc.ReST
    Argo.Panic
    Argo.ServerState
    Argo.Socket
    Argo.Netstring
  hs-source-dirs: src
  default-language: Haskell2010


test-suite test-argo
  import:              deps, warnings, errors
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       argo,
                       quickcheck-instances,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck,
