cabal-version:       2.4
name:                cryptol-remote-api
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              David Thrane Christiansen
maintainer:          dtc@galois.com
category:            Language
extra-source-files:  CHANGELOG.md

common deps
  build-depends:       base >=4.11.1.0 && <4.13
                     , argo
                     , lens
                     , aeson
                     , base64-bytestring
                     , bytestring
                     , containers
                     , cryptol == 2.6.1
                     , directory
                     , text
                     , unordered-containers ^>=0.2
                     , vector
                     , scientific ^>=0.3

executable cryptol-remote-api
  import:              deps
  build-depends:       optparse-applicative ^>= 0.14
  main-is:             Main.hs
  other-modules:       CryptolServer
                     , CryptolServer.Call
                     , CryptolServer.ChangeDir
                     , CryptolServer.EvalExpr
                     , CryptolServer.LoadModule
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test-cryptol-remote-api
  import:              deps
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  other-modules:       CryptolServer
                     , CryptolServer.Call
  main-is:             Test.hs
  build-depends:       proto
                     , quickcheck-instances
                     , tasty
                     , tasty-quickcheck
