cabal-version:       2.4
name:                cryptol-remote-api
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              David Thrane Christiansen
maintainer:          dtc@galois.com
category:            Language
extra-source-files:  CHANGELOG.md

common deps
  build-depends:
    base >=4.11.1.0 && <4.13,
    argo,
    aeson                ^>= 1.4.2,
    base64-bytestring    ^>= 1.0,
    bytestring           ^>= 0.10.8,
    containers           >=0.5.11 && <0.7,
    cryptol               == 2.6.1,
    directory            ^>= 1.3.1,
    lens                 ^>= 4.17,
    scientific           ^>= 0.3,
    text                 ^>= 1.2.3,
    unordered-containers ^>= 0.2,
    vector               ^>= 0.12,

executable cryptol-remote-api
  import:              deps
  build-depends:       optparse-applicative ^>= 0.14
  main-is:             Main.hs
  other-modules:       CryptolServer
                       CryptolServer.Call
                       CryptolServer.ChangeDir
                       CryptolServer.EvalExpr
                       CryptolServer.LoadModule
                       CryptolServer.Names
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test-cryptol-remote-api
  import:              deps
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                       src
  other-modules:       CryptolServer
                       CryptolServer.Call
  main-is:             Test.hs
  build-depends:       proto,
                       quickcheck-instances,
                       tasty,
                       tasty-quickcheck,
