cabal-version:       2.4
name:                cryptol-remote-api
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              David Thrane Christiansen
maintainer:          dtc@galois.com
category:            Language
extra-source-files:  CHANGELOG.md

common deps
  build-depends:
    base                 >=4.11.1.0 && <4.13,
    argo,
    aeson                ^>= 1.4.2,
    base64-bytestring    ^>= 1.0,
    bytestring           ^>= 0.10.8,
    containers           >=0.5.11 && <0.7,
    cryptol               == 2.7.1,
    directory            ^>= 1.3.1,
    filepath             ^>= 1.4,
    lens                 ^>= 4.17,
    scientific           ^>= 0.3,
    text                 ^>= 1.2.3,
    unordered-containers ^>= 0.2,
    vector               ^>= 0.12,

  default-language:    Haskell2010

library
  import:              deps
  hs-source-dirs:      src

  exposed-modules:
    CryptolServer
    CryptolServer.Call
    CryptolServer.ChangeDir
    CryptolServer.Data.Expression
    CryptolServer.Data.Type
    CryptolServer.EvalExpr
    CryptolServer.Exceptions
    CryptolServer.FocusedModule
    CryptolServer.LoadModule
    CryptolServer.Names
    CryptolServer.Sat
    CryptolServer.TypeCheck

executable cryptol-remote-api
  import:              deps
  main-is:             Main.hs
  hs-source-dirs:      cryptol-remote-api

  build-depends:
    cryptol-remote-api,
    optparse-applicative ^>= 0.14,
    async                ^>= 2.2.1,
    sbv                   == 8.3,

test-suite test-cryptol-remote-api
  import:              deps
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs

  build-depends:
    cryptol-remote-api,
    quickcheck-instances ^>= 0.3.19,
    tasty                ^>= 1.2.1,
    tasty-quickcheck     ^>= 0.10,
