cabal-version:       2.4
name:                file-echo-api
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Andrew Kent
maintainer:          andrew@galois.com
category:            Language
extra-source-files:  CHANGELOG.md
data-files:          test-scripts/**/*.py
                     test-scripts/**/*.txt

common warnings
  ghc-options:
    -Weverything
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-unsafe
    -Wno-safe
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-implicit-prelude

common deps
  build-depends:
    base                 >=4.11.1.0 && <4.15,
    argo,
    aeson                >= 1.4.2,
    base64-bytestring    >= 1.0,
    bytestring           ^>= 0.10.8,
    containers           >=0.5.11 && <0.7,
    directory            ^>= 1.3.1,
    filepath             ^>= 1.4,
    lens                 >= 4.17 && < 4.20,
    optparse-applicative >= 0.14 && < 0.17,
    scientific           ^>= 0.3,
    text                 ^>= 1.2.3,
    unordered-containers ^>= 0.2,
    vector               ^>= 0.12,

  default-language:    Haskell2010

library
  import:              deps, warnings
  hs-source-dirs:      src

  exposed-modules:
    FileEchoServer

executable file-echo-api
  import:              deps, warnings
  main-is:             Main.hs
  hs-source-dirs:      file-echo-api

  build-depends:
    file-echo-api

test-suite test-file-echo-api
  import:              deps, warnings
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Paths_file_echo_api
  build-depends:
    argo-python,
    file-echo-api,
    quickcheck-instances ^>= 0.3.19,
    tasty                 >= 1.2.1,
    tasty-quickcheck     ^>= 0.10,
    tasty-script-exitcode
