cabal-version:       2.4
name:                file-echo-api
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Andrew Kent
maintainer:          andrew@galois.com
category:            Language
extra-source-files:  CHANGELOG.md
data-files:          test-scripts/**/*.py
                     test-scripts/**/*.txt

common rts
  ghc-options:
    -threaded

common warnings
  ghc-options:
    -Wall
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-unsafe
    -Wno-safe
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-implicit-prelude

common deps
  build-depends:
    base                 >=4.11.1.0 && <4.22,
    argo,
    aeson                >= 1.4.2,
    bytestring           >= 0.10.8 && < 0.13,
    containers           >=0.5.11 && <0.8,
    directory            ^>= 1.3.1,
    optparse-applicative >= 0.14 && < 0.19,
    scientific           ^>= 0.3,
    text                 >= 1.2.3 && < 2.2,
    time,
    unordered-containers ^>= 0.2,
    vector               ^>= 0.13,

  default-language:    Haskell2010

library
  import:              deps, warnings
  hs-source-dirs:      src

  exposed-modules:
    FileEchoServer,
    MutableFileEchoServer

executable file-echo-api
  import:              deps, rts, warnings
  main-is:             Main.hs
  hs-source-dirs:      file-echo-api
  build-depends:
    file-echo-api
  other-modules:
    Paths_file_echo_api

executable mutable-file-echo-api
  import:              deps, rts, warnings
  main-is:             Main.hs
  hs-source-dirs:      mutable-file-echo-api
  build-depends:
    file-echo-api
  other-modules:
    Paths_file_echo_api
