cabal-version:       2.4
name:                argo-python
version:             0.1.0.0
synopsis:            Dummy package that contains the Python components of Argo as data files.
license:             BSD-3-Clause
--license-file:        LICENSE
author:              Galois, Inc.
maintainer:          dtc@galois.com
category:            Network
data-files:          argo/*.py
                     cryptol/*.py
                     saw/*.py
                     requirements.txt

library
  build-depends:     base
  default-language:  Haskell2010
  hs-source-dirs:    hs
  exposed-modules:   Argo.PythonBindings
  other-modules:     Paths_argo_python
