[tool.poetry]
name = "argo-client"
version = "0.0.11"
readme = "README.md"
keywords = ["JSON", "RPC"]
description = "A JSON RPC client library."
authors = ["Galois, Inc. <cryptol-team@galois.com>"]

license = "BSD License"
include = [
    "LICENSE",
    "CHANGELOG.md",
    "mypy.ini"
]

[tool.poetry.urls]
"Source" = "https://github.com/GaloisInc/argo/tree/master/python"
"Bug Tracker" = "https://github.com/GaloisInc/argo/issues"

[tool.poetry.dependencies]
python = ">=3.8.0,<4"
requests = "^2.26.0"
urllib3 = ">=1.26.5"

[tool.poetry.dev-dependencies]
mypy = "^0.991"

[build-system]
requires = ["poetry>=1.1.4", "setuptools>=40.8.0"]
