[tool.poetry]
name = "argo-client"
version = "0.0.11"
readme = "README.md"
keywords = ["JSON", "RPC"]
description = "A JSON RPC client library."
authors = ["Galois, Inc. <cryptol-team@galois.com>"]

license = "BSD License"
include = [
    "LICENSE",
    "CHANGELOG.md",
    "mypy.ini"
]

[tool.poetry.urls]
"Source" = "https://github.com/GaloisInc/argo/tree/master/python"
"Bug Tracker" = "https://github.com/GaloisInc/argo/issues"

[tool.poetry.dependencies]
python = ">=3.8.0,<4"

# argo does not directly depend on these but mypy does depend on these.
# These not being locked caused CI to fail due to these updating automatically, see https://github.com/GaloisInc/argo/issues/207.
# We will want to unlock these at some point, see https://github.com/GaloisInc/cryptol/issues/1645.
requests = ">=2.26.0, <2.31.0.20240310"
urllib3 = ">=1.26.5, <2.2.0"
types-requests = "<2.31.0.20240310"

[tool.poetry.dev-dependencies]
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
