[tool.poetry]
name = "argo-client"
version = "0.0.13"
readme = "README.md"
keywords = ["JSON", "RPC"]
description = "A JSON RPC client library."
authors = ["Galois, Inc. <cryptol-team@galois.com>"]

license = "BSD License"
include = [
    "LICENSE",
    "CHANGELOG.md",
    "mypy.ini"
]

[tool.poetry.urls]
"Source" = "https://github.com/GaloisInc/argo/tree/master/python"
"Bug Tracker" = "https://github.com/GaloisInc/argo/issues"

[tool.poetry.dependencies]
python = ">=3.8.0,<4"

requests = ">=2.31.0"
urllib3 = ">=2.2.0"
types-requests = ">=2.31.0"

[tool.poetry.dev-dependencies]
mypy = "^1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
